<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/material_motion_easing_accelerated" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="386dp"
        android:clickable="true"
        android:contentDescription="@string/todo"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />


    <Button
        android:id="@+id/button2"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="101dp"
        android:layout_marginBottom="347dp"
        android:text="@string/button" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="167dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="164dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="314dp"
        android:text="@string/togglebutton" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="97dp"
        android:layout_height="106dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="86dp"
        android:layout_marginBottom="373dp"
        android:contentDescription="@string/this_is_text"
        app:srcCompat="@drawable/ic_launcher_background" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="next"
        android:text="@string/next"
        android:alpha=".5"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <ImageView
        android:tag="orange"
        android:id="@+id/orangesus"
        android:layout_width="216dp"
        android:layout_height="180dp"
        app:srcCompat="@drawable/orangesus"
        android:onClick="sus"
        android:alpha="0"
        android:background="@android:color/transparent"/>

</RelativeLayout>